--- a/Untitled1.Rmd
+++ b/Untitled1.Rmd
@@ -4,7 +4,7 @@ author: "Linus"
 date: "2016年9月12日"
 output: html_document
 ---
-
+edit
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
